# language_app

./: .gitignore  CLAUDE.md  MOBILE_APP_PLAN.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  tts.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/ml/: __init__.py  beta_utils.py  bradley_terry.py  luce_service.py  model.py  registry.py  service.py  types.py
backend/app/models/: __init__.py  ml.py  progress.py  review.py  user.py  word.py
backend/app/routers/: asr.py  attempts.py  audio.py  auth.py  drill.py  fsrs.py  lesson.py  ml.py  sync.py  tone_drill.py  vocab.py  vowel_drill.py
backend/app/services/: drill.py  lesson.py  state_persistence.py  tone_drill.py  vowel_drill.py
backend/app/services/asr/: __init__.py  transcriber.py
backend/corpus/: Dps2_fUosJo.txt  Dps2_fUosJo_ngrams.json  WXVppNA4xzA.txt  WXVppNA4xzA_ngrams.json  gWZ620nh_S0.txt  gWZ620nh_S0_ngrams.json  knJVlNiXjhQ.txt  knJVlNiXjhQ_ngrams.json  sources.json  wABsPLBbRZE.txt  wABsPLBbRZE_ngrams.json  wB_LiN9bPOo.txt  wB_LiN9bPOo_ngrams.json
backend/data/: attempts.json  progress.json  tone_cards.json
backend/scripts/: extract_ngrams.py  fetch_youtube_transcript.py  find_vietnamese_videos.py  generate_audio.py  generate_audio_fpt.py  replay_state.py  restart.sh  start.sh  test_asr.py  test_fpt_tts.py
backend/tests/: test_bradley_terry.py  test_vowel_drill.py
deploy/: language-app.nginx  (+4 more)
(+83 files in other folders)
