[project]
name = "language-app-backend"
version = "0.1.0"
description = "Language learning application backend with FSRS spaced repetition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "piper-tts>=1.2.0",
    "python-multipart>=0.0.6",
    # Authentication
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.0.0",
    # Production database
    "asyncpg>=0.29.0",
    # ASR (speech recognition)
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
